[workspace]
resolver = "3"

members = ["crates/*"]

[workspace.package]
version = "19.15.1"
authors = [
    "Unleash developers <team@getunleash.io>",
    "Christopher Kolstad <chriswk@getunleash.io>",
    "Simon Hornby <simon@getunleash.io>",
    "Nuno Gois <nuno@getunleash.io>",
    "Gaston Fournier <gaston@getunleash.io>",
]
description = "Unleash edge is a proxy for Unleash. It can return both evaluated feature toggles as well as the raw data from Unleash's client API"
edition = "2024"
homepage = "https://github.com/Unleash/unleash-edge"
documentation = "https://docs.getunleash.io/reference/unleash-edge"
license = "MIT"
repository = "https://github.com/Unleash/unleash-edge"
rust-version = "1.89.0"

[workspace.dependencies]
ahash = { version = "0.8.12" }
anyhow = { version = "1.0.100" }
async-trait = { version = "0.1.89" }
aws-config = { version = "1.8.6", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.106.0", features = ["behavior-version-latest"] }
axum = { version = "0.8.6", features = ["macros", "tokio", "json", "query", "tracing"] }
axum-extra = { version = "0.10.2", features = ["tracing"] }
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
axum-test = { version = "18.1.0", features = ["pretty-assertions", "reqwest"] }
base64 = { version = "0.22.1" }
chrono = { version = "0.4.42", features = ["serde"] }
cidr = { version = "0.3.1" }
clap = { version = "4.5.48", features = ["derive", "env"] }
clap-markdown = { version = "0.1.5" }
dashmap = { version = "6.1.0", features = ["serde"] }
etag = { version = "4.0.0" }
eventsource-client = { version = "0.15.0" }
eventsource-stream = { version = "0.2.3" }
futures = { version = "0.3.31" }
futures-util = { version = "0.3.31" }
http = { version = "1.3.1" }
hyper-util = { version = "0.1.17" }
ipnet = { version = "2.11.0" }
itertools = { version = "0.14.0" }
json-structural-diff = { version = "0.2.0" }
lazy_static = { version = "1.5.0" }
maplit = { version = "1.0.2" }
num_cpus = { version = "1.17.0" }
opentelemetry = { version = "0.30.0", features = ["trace", "metrics", "logs", "tracing"] }
opentelemetry-otlp = { version = "0.30.0", features = ["reqwest", "tracing", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.30.0", features = ["trace"] }
p12-keystore = { version = "0.2.0" }
pkix = { version = "0.2.4" }
pretty_assertions = { version = "1.4.1" }
prometheus = { version = "0.14.0", features = ["process"] }
prometheus-reqwest-remote-write = { version = "0.4.0" }
proptest = { version = "1.8.0" }
rand = "0.9.2"
redis = { version = "0.32.6", features = ["tokio-rustls-comp", "cluster"] }
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls", "json", "stream"] }
rustls = { version = "0.23.32", default-features = false, features = ["ring"] }
rustls-pemfile = { version = "2.2.0" }
semver = { version = "1.0.27" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
serde_qs = { version = "0.15.0", features = ["axum"] }
shadow-rs = { version = "1.3.0" }
socket2 = { version = "0.6.0" }
test-case = { version = "3.3.1" }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "tracing", "fs", "signal"] }
tokio-rustls = { version = "0.26.4" }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tower = { version = "0.5.2" }
tower-http = { version = "0.6.6", features = ["cors", "normalize-path", "trace", "compression-gzip", "compression-zstd"] }
tracing = { version = "0.1.41" }
tracing-opentelemetry = { version = "0.31.0", features = ["metrics"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
tracing-test = { version = "0.2.5" }
traced-test = { version = "1.0.4" }
ulid = { version = "1.2.1", features = ["serde"] }
unleash-types = { version = "0.15.21", features = ["hashes", "openapi"] }
unleash-yggdrasil = { version = "0.18.1" }
url = { version = "2.5.7" }
utoipa = { version = "5.4.0", features = ["chrono", "axum_extras"] }
utoipauto = { version = "0.3.0-alpha.2" }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
