[workspace]
resolver = "3"

members = ["crates/oss/*", "crates/enterprise/*"]

[workspace.package]
version = "20.1.8"
authors = [
    "Unleash developers <team@getunleash.io>",
    "Christopher Kolstad <chriswk@getunleash.io>",
    "Simon Hornby <simon@getunleash.io>",
    "Nuno Gois <nuno@getunleash.io>",
    "Gaston Fournier <gaston@getunleash.io>",
]
description = "Unleash edge is a proxy for Unleash. It can return both evaluated feature toggles as well as the raw data from Unleash's client API"
edition = "2024"
homepage = "https://github.com/Unleash/unleash-edge"
documentation = "https://docs.getunleash.io/reference/unleash-edge"
license = "MIT"
repository = "https://github.com/Unleash/unleash-edge"
rust-version = "1.92.0"

[workspace.dependencies]
ahash = { version = "0.8.12" }
anyhow = { version = "1.0.102" }
async-trait = { version = "0.1.89" }
aws-config = { version = "1.8.14", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.124.0", features = ["behavior-version-latest"] }
axum = { version = "0.8.8", features = ["macros", "tokio", "json", "query", "tracing"] }
axum-core = { version = "0.5.6" }
axum-extra = { version = "0.12.5", features = ["tracing"] }
axum-server = { version = "0.8.0", default-features = false, features = ["tls-rustls"] }
axum-test = { version = "18.7.0", features = ["pretty-assertions", "reqwest"] }
base64 = { version = "0.22.1" }
chrono = { version = "0.4.43", features = ["serde"] }
cidr = { version = "0.3.2" }
clap = { version = "4.5.59", features = ["derive", "env"] }
clap-markdown = { version = "0.1.5" }
dashmap = { version = "6.1.0", features = ["serde"] }
etag = { version = "4.0.0" }
eventsource-client = { version = "0.16.2" }
eventsource-stream = { version = "0.2.3" }
futures = { version = "0.3.32" }
futures-util = { version = "0.3.32" }
hmac = { version = "0.12.1" }
http = { version = "1.4.0" }
http-body-util = { version = "0.1.3" }
hyper = { version = "1.8.1" }
hyper-util = { version = "0.1.20" }
ipnet = { version = "2.11.0" }
itertools = { version = "0.14.0" }
json-structural-diff = { version = "0.2.0" }
lazy_static = { version = "1.5.0" }
maplit = { version = "1.0.2" }
num_cpus = { version = "1.17.0" }
opentelemetry = { version = "0.31.0", features = ["trace", "metrics", "logs"] }
opentelemetry-appender-tracing = { version = "0.31.1" }
opentelemetry-otlp = { version = "0.31.0", features = ["reqwest", "metrics", "logs", "serde", "serde_json", "serialize", "http-json", "grpc-tonic"] }
opentelemetry-prometheus = { version = "0.31.0" }
opentelemetry-semantic-conventions = { version = "0.31.0" }
opentelemetry_sdk = { version = "0.31.0", features = ["metrics", "rt-tokio", "spec_unstable_metrics_views"] }
p12-keystore = { version = "0.2.0" }
pkix = { version = "0.2.5" }
pretty_assertions = { version = "1.4.1" }
prometheus = { version = "0.14.0", features = ["process"] }
prometheus-reqwest-remote-write = { version = "0.5.0" }
proptest = { version = "1.10.0" }
rand = "0.10.0"
redis = { version = "1.0.3", features = ["tokio-rustls-comp", "cluster"] }
regex = { version = "1.12.3" }
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "json", "stream", "query"] }
rustls = { version = "0.23.36", default-features = false, features = ["ring"] }
rustls-pemfile = { version = "2.2.0" }
semver = { version = "1.0.27" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
serde_qs = { version = "1.0.0", features = ["axum"] }
sha2 = { version = "0.10.9" }
shadow-rs = { version = "1.7.0" }
socket2 = { version = "0.6.2" }
test-case = { version = "3.3.1" }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "tracing", "fs", "signal"] }
tokio-rustls = { version = "0.26.4" }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tower = { version = "0.5.3" }
tower-http = { version = "0.6.8", features = ["cors", "normalize-path", "trace", "compression-gzip", "compression-zstd", "compression-br", "compression-deflate"] }
tracing = { version = "0.1.44" }
tracing-opentelemetry = { version = "0.32.1", features = ["metrics"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tracing-test = { version = "0.2.6" }
traced-test = { version = "1.0.4" }
ulid = { version = "1.2.1", features = ["serde"] }
unleash-edge = { path = "./crates/oss/unleash-edge" }
unleash-edge-appstate = { path = "./crates/oss/unleash-edge-appstate" }
unleash-edge-auth = { path = "./crates/oss/unleash-edge-auth" }
unleash-edge-backstage = { path = "./crates/oss/unleash-edge-backstage" }
unleash-edge-cli = { path = "./crates/oss/unleash-edge-cli" }
unleash-edge-client-api = { path = "./crates/oss/unleash-edge-client-api" }
unleash-edge-delta = { path = "./crates/enterprise/unleash-edge-delta" }
unleash-edge-edge-api = { path = "./crates/oss/unleash-edge-edge-api" }
unleash-edge-enterprise = { path = "./crates/enterprise/unleash-edge-enterprise" }
unleash-edge-enterprise-api = { path = "./crates/enterprise/unleash-edge-enterprise-api" }
unleash-edge-feature-cache = { path = "./crates/oss/unleash-edge-feature-cache" }
unleash-edge-feature-filters = { path = "./crates/oss/unleash-edge-feature-filters" }
unleash-edge-feature-refresh = { path = "./crates/oss/unleash-edge-feature-refresh" }
unleash-edge-frontend-api = { path = "./crates/oss/unleash-edge-frontend-api" }
unleash-edge-http-client = { path = "./crates/oss/unleash-edge-http-client" }
unleash-edge-metrics = { path = "./crates/oss/unleash-edge-metrics" }
unleash-edge-offline = { path = "./crates/oss/unleash-edge-offline" }
unleash-edge-persistence = { path = "./crates/oss/unleash-edge-persistence" }
unleash-edge-request-logger = { path = "./crates/oss/unleash-edge-request-logger" }
unleash-edge-streaming = { path = "./crates/enterprise/unleash-edge-streaming" }
unleash-edge-tracing = { path = "./crates/enterprise/unleash-edge-tracing" }
unleash-edge-types = { path = "./crates/oss/unleash-edge-types" }
unleash-types = { version = "0.15.21", features = ["hashes", "openapi"] }
unleash-yggdrasil = { version = "0.20.2" }
url = { version = "2.5.8" }
utoipa = { version = "5.4.0", features = ["chrono", "axum_extras"] }
utoipauto = { version = "0.3.0-alpha.2" }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
