[package]
name = "lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.9.2"
lambda_runtime = "0.9.1"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
unleash-edge = {path="../../unleash-edge/server"}
openssl = { version = "0.10.35", features = ["vendored"] }
clap = { version = "4.4.18", features = ["derive", "env"] }
actix-cors = "0.6.5"
actix-http = { version = "3.5.1", features = ["compress-zstd", "rustls-0_21"] }
actix-middleware-etag = "0.3.0"
actix-service = "2.0.2"
actix-web = { version = "4.4.1", features = ["rustls-0_21", "compress-zstd"] }
unleash-types = { version = "0.11", features = ["openapi", "hashes"] }
dashmap = "5.5.3"
futures = "0.3.30"
futures-core = "0.3.30"
utoipa = { version = "4.2.0", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "6", features = ["actix-web"] }
anyhow = "1.0.79"
clap-markdown = "0.1.3"
serde_qs = { version = "0.12.0", features = ["actix4", "tracing"] }
lazy_static = "1.4.0"
once_cell = "1.19.0"

[package.metadata.lambda.env]
RUST_LOG = "debug"
