[package]
authors = [
    "Unleash developers <team@getunleash.io>",
    "Christopher Kolstad <chriswk@getunleash.io>",
    "Simon Hornby <simon@getunleash.io>",
    "Nuno Gois <nuno@getunleash.io>",
    "Gaston Fournier <gaston@getunleash.io>",
]
description = "Unleash edge is a proxy for Unleash. It can return both evaluated feature toggles as well as the raw data from Unleash's client API"
edition = "2021"
homepage = "https://github.com/Unleash/unleash-edge"
license = "MIT"
name = "unleash-edge"
repository = "https://github.com/Unleash/unleash-edge"
rust-version = "1.81.0"
version = "19.6.3"

[package.metadata.wix]
upgrade-guid = "11E5D83A-3034-48BB-9A84-9F589EBD648C"
path-guid = "6F606A3B-C7E9-43EC-8B6E-91D7B74F80FC"
license = false
eula = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[dependencies]
actix-cors = "0.7.0"
actix-http = "3.9.0"
actix-middleware-etag = "0.4.2"
actix-service = "2.0.2"
actix-web = { version = "4.9.0", features = ["rustls-0_23", "compress-zstd"] }
actix-web-lab = { version = "0.23.0" }
ahash = "0.8.11"
anyhow = "1.0.95"
async-trait = "0.1.86"
aws-config = { version = "1.5.16", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.76.0", features = ["behavior-version-latest"] }
base64 = "0.22.1"
chrono = { version = "0.4.39", features = ["serde"] }
cidr = "0.3.1"
clap = { version = "4.5.29", features = ["derive", "env"] }
clap-markdown = "0.1.4"
dashmap = "6.1.0"
eventsource-client = { version = "0.13.0" }
futures = "0.3.31"
futures-core = "0.3.31"
iter_tools = "0.24.0"
itertools = "0.14.0"
json-structural-diff = "0.2.0"
lazy_static = "1.5.0"
num_cpus = "1.16.0"
opentelemetry = { version = "0.27.1", features = ["trace", "metrics"] }
opentelemetry-prometheus = "0.27.0"
opentelemetry-semantic-conventions = "0.28.0"
opentelemetry_sdk = { version = "0.27.1", features = [
    "metrics",
    "serde",
    "serde_json",
    "logs",
] }
prometheus = { version = "0.13.4", features = ["process"] }
prometheus-reqwest-remote-write = { version = "0.2.1" }
prometheus-static-metric = "0.5.1"
rand = "0.9.0"
redis = { version = "0.28.2", features = [
    "tokio-comp",
    "tokio-rustls-comp",
    "cluster",
] }
reqwest = { version = "0.12.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "native-tls",
] }
rustls = { version = "0.23.23", default-features = false, features = [
    "logging",
    "ring",
    "std",
] }
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.11.0"
semver = "1.0.25"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_qs = { version = "0.13.0", features = ["actix4", "tracing"] }
shadow-rs = { version = "0.38.1" }
tokio = { version = "1.43.0", features = [
    "macros",
    "rt-multi-thread",
    "tracing",
    "fs",
] }
tokio-stream = { version = "0.1.17" }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
ulid = "1.2.0"
unleash-types = { version = "0.15.5", features = ["openapi", "hashes"] }
unleash-yggdrasil = { version = "0.17.0" }
utoipa = { version = "5.3.1", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["actix-web"] }
[dev-dependencies]
actix-http = "3.9.0"
actix-http-test = "3.2.0"
actix-service = "2.0.2"
capture-logger = "0.1.1"
env_logger = "0.11.6"
maplit = "1.0.2"
rand = "0.9.0"
test-case = "3.3.1"
testcontainers = "0.23.2"
testcontainers-modules = { version = "0.11.6", features = [
    "redis",
    "localstack",
] }
tracing-test = "0.2.5"

[build-dependencies]
shadow-rs = "0.38.1"
