[package]
authors = [
    "Unleash developers <team@getunleash.io>",
    "Christopher Kolstad <chriswk@getunleash.io>",
    "Simon Hornby <simon@getunleash.io>",
    "Nuno Gois <nuno@getunleash.io>",
    "Gaston Fournier <gaston@getunleash.io>",
]
description = "Unleash edge is a proxy for Unleash. It can return both evaluated feature toggles as well as the raw data from Unleash's client API"
edition = "2024"
homepage = "https://github.com/Unleash/unleash-edge"
license = "MIT"
name = "unleash-edge"
repository = "https://github.com/Unleash/unleash-edge"
rust-version = "1.85.0"
version = "19.11.4"

[package.metadata.wix]
upgrade-guid = "11E5D83A-3034-48BB-9A84-9F589EBD648C"
path-guid = "6F606A3B-C7E9-43EC-8B6E-91D7B74F80FC"
license = false
eula = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[features]
default = ["s3-persistence"]
s3-persistence = ["aws-sdk-s3", "aws-config"]

[dependencies]
actix-allow-deny-middleware = "0.1.2"
actix-cors = "0.7.1"
actix-http = "3.11.0"
actix-middleware-etag = "0.4.4"
actix-service = "2.0.3"
actix-web = { version = "4.11.0", features = ["rustls-0_23", "compress-zstd"] }
actix-web-lab = { version = "0.24.1" }
ahash = "0.8.12"
anyhow = "1.0.98"
async-trait = "0.1.88"
aws-config = { version = "1.8.0", optional = true, features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.95.0", optional = true, features = ["behavior-version-latest"] }
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
cidr = "0.3.1"
clap = { version = "4.5.40", features = ["derive", "env"] }
clap-markdown = "0.1.5"
dashmap = { version = "6.1.0", features = ["serde"] }
eventsource-client = { version = "0.15.0" }
futures = "0.3.31"
futures-core = "0.3.31"
ipnet = "2.11.0"
itertools = "0.14.0"
json-structural-diff = "0.2.0"
lazy_static = "1.5.0"
num_cpus = "1.17.0"
opentelemetry = { version = "0.30.0", features = ["trace", "metrics"] }
opentelemetry-prometheus = "0.29.1"
opentelemetry-semantic-conventions = "0.30.0"
opentelemetry_sdk = { version = "0.30.0", features = [
    "metrics",
    "serde",
    "serde_json",
    "logs",
] }
p12-keystore = "0.1.5"
pin-project-lite = "0.2.16"
pkix = "0.2.4"
prometheus = { version = "0.14.0", features = ["process"] }
prometheus-reqwest-remote-write = { version = "0.4.0" }
prometheus-static-metric = "0.5.1"
rand = "0.9.1"
redis = { version = "0.32.3", features = [
    "tokio-comp",
    "tokio-rustls-comp",
    "cluster",
] }
reqwest = { version = "0.12.22", default-features = false, features = [
    "json",
    "rustls-tls"
] }
rustls = { version = "0.23.28", default-features = false, features = [
    "logging",
    "ring",
    "std",
] }
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.12.0"
semver = "1.0.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_qs = { version = "0.15.0", features = ["actix4", "tracing"] }
shadow-rs = { version = "1.2.0" }
tokio = { version = "1.45.1", features = [
    "macros",
    "rt-multi-thread",
    "tracing",
    "fs",
] }
tokio-stream = { version = "0.1.17" }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
ulid = "1.2.1"
unleash-types = { version = "0.15.14", features = ["openapi", "hashes"] }
unleash-yggdrasil = { version = "0.17.5" }
utoipa = { version = "5.4.0", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
zip = { version = "3.0.0" }
[dev-dependencies]
actix-http = "3.11.0"
actix-http-test = "3.2.0"
actix-service = "2.0.3"
capture-logger = "0.1.1"
env_logger = "0.11.8"
maplit = "1.0.2"
rand = "0.9.1"
test-case = "3.3.1"
testcontainers = "0.24.0"
testcontainers-modules = { version = "0.12.1", features = [
    "redis",
    "localstack",
] }
tracing-test = "0.2.5"

[build-dependencies]
shadow-rs = "1.2.0"
