[package]
name = "unleash-edge-client-metrics"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
actix-web = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
prometheus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }
unleash-types = { workspace = true }
unleash-edge-types = { path = "../types" }
utoipa = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }
tracing-test = { workspace = true }
