[package]
name = "unleash-edge-appstate"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
axum = { workspace = true }
dashmap = { workspace = true }
ipnet = { workspace = true }
tokio = { workspace = true }
ulid = { workspace = true }
unleash-edge-auth = { path = "../unleash-edge-auth" }
unleash-edge-cli = { path = "../unleash-edge-cli" }
unleash-edge-feature-cache = { path = "../unleash-edge-feature-cache" }
unleash-edge-feature-refresh = { path = "../unleash-edge-feature-refresh" }
unleash-edge-http-client = { path = "../unleash-edge-http-client" }
unleash-edge-persistence = { path = "../unleash-edge-persistence" }
unleash-edge-types = { path = "../unleash-edge-types" }
unleash-types = { workspace = true }