[package]
name = "unleash-edge-appstate"
version = "20.0.0"
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
publish = false

[dependencies]
axum = { workspace = true }
dashmap = { workspace = true }
ipnet = { workspace = true }
prometheus = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }
unleash-edge-auth = { path = "../unleash-edge-auth" }
unleash-edge-cli = { path = "../unleash-edge-cli" }
unleash-edge-delta = { path = "../unleash-edge-delta" }
unleash-edge-feature-cache = { path = "../unleash-edge-feature-cache" }
unleash-edge-feature-refresh = { path = "../unleash-edge-feature-refresh" }
unleash-edge-http-client = { path = "../unleash-edge-http-client" }
unleash-edge-persistence = { path = "../unleash-edge-persistence" }
unleash-edge-streaming = { path = "../unleash-edge-streaming" }
unleash-edge-types = { path = "../unleash-edge-types" }
unleash-types = { workspace = true }
