[package]
name = "unleash-edge-auth"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
publish = true
[dependencies]
axum = { workspace = true }
dashmap = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
unleash-edge-cli = { workspace = true }
unleash-edge-feature-refresh = { workspace = true }
unleash-edge-http-client = { workspace = true }
unleash-edge-persistence = { workspace = true }
unleash-edge-types = { workspace = true }
unleash-types = { workspace = true }

[dev-dependencies]
axum-test = { workspace = true }
tracing-test = { workspace = true }
