[package]
name = "unleash-edge-backstage"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
axum = { workspace = true }
dashmap = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
unleash-edge-appstate = { path = "../unleash-edge-appstate" }
unleash-edge-auth = { path = "../unleash-edge-auth" }
unleash-edge-cli = { path = "../unleash-edge-cli" }
unleash-edge-feature-refresh = { path = "../unleash-edge-feature-refresh" }
unleash-edge-http-client = { path = "../unleash-edge-http-client" }
unleash-edge-persistence = { path = "../unleash-edge-persistence" }
unleash-edge-types = { path = "../unleash-edge-types" }
unleash-types = { workspace = true }